--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ img {
 section{
 
    text-align: center;
-   /* border:1px solid var(--ter-color);                 /*I have to see this */
+                  /*I have to see this
        /* border-width: 0.5re;m 26rem */ 
    padding-left:8rem ;
    padding-right: 8rem;
