--- a/style.css
+++ b/style.css
@@ -115,8 +115,8 @@ header {
 }
 img {
     
-    max-width: 50%;                             /*I have to see this */
-    height: auto;
+     max-width: 60%;                             /* I have to see this  */
+    /* height: auto; */
     text-align: center;
     padding-top:3rem;
   }
@@ -124,7 +124,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;   
+    /* width: 50%;    */
   }
 
   /*section */
@@ -172,18 +172,17 @@ section{
 .large-font{
     font-size:200%;
 }
-@media screen and (max-width:600px){
+@media screen and (max-width:800px){
     .navigation{
         
-        padding:2rem 1.5rem; 
+        padding:2rem 1rem; 
     }
     .navigation div{
-        text-align: center;
-        font-size: 65%;     
+        /* text-align: center; */
+        font-size: 80%;     
     }
     .navigation span{
-        text-align: center;
-        font-size:90%;
+        font-size:100%;
 
         
     }
@@ -209,10 +208,12 @@ section{
     }
     img {
     
-        max-width: 150%;                             /*I have to see this */
-        height: 180px;
         text-align: center;
-        padding-top:3rem;
-      }
+        max-width:80%;
+        padding-top:1rem;
+    }
+    h1{
+        font-size:120%;
+    }
     
 }
