style:fixed border

--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ section{
         padding-left:2rem ;
         padding-right: 2rem;
         padding-bottom: 2rem;
+        border-radius: 0rem;
      
      }
     
